syntax = "proto2";
package ssmessage;

message kickGateUser {
	required string userID = 1;	
}
